fixing the centering for author images on mobile

--- a/wp-content/themes/wysac-2016/style.css
+++ b/wp-content/themes/wysac-2016/style.css
@@ -933,8 +933,8 @@ span.all-experts-title {
 
 .wp-user-avatar-profile-image {
 	border-radius: 50%;
-	padding: 0 42%;
-}
+	/*padding: 0 42%;*/
+}ß
 
 
 
